@@ -2,6 +2,8 @@ Nutch Change Log
 
 Release 1.3 - Current Development
 
+* NUTCH-977 SolrMappingReader uses hardcoded configuration parameter name for mapping file (markus)
+
 * NUTCH-976 Rename properties solrindex.* to solr.* (markus)
 
 * NUTCH-890 Fix IllegalAccessError with slf4j used in Solrj (markus)
